2010-05-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fixed the
	Warning monitor stauts in tactical view
	for bug: 3002602

2010-05-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/setup/gis_step_2.php
	godmode/setup/gis.php: Created error and
	successfuly messages when create, update or
	delete a map connection for bug 2994197

2010-05-17  Sergio Martin <sergio.martin@artica.es>

	* operation/extensions.php
	godmode/extensions.php: Fixed the undefined
	variable display on extensions sections
	for bug 2989967

2010-05-17  Junichi Satoh  <junichi@rworks.jp>

	* include/gettext.php: Changed the judgment method for 64bit systems.
	'x86_64' is not acceptable by some systems.

2010-05-14 Raúl Mateos <raulofpandora@gmail.com>

	* operation/agentes/gis_view.php, tactical.php: Clean code. Updated year.

2010-05-14  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/groups/group_list.php: fixed the request of group data when get
	data about "All" group.
	Fixes: #2993501

2010-05-14  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php: Fixed
	the adding at visual map only the agent if module is 
	no selected and only the module if is selected.
	Fixes: #2989339

2010-05-14  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: fixed the title of button to
	"update layer", and now by default the group of new layer is none.
	Fixes: #2990762

2010-05-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php
	operation/agentes/ver_agente.php
	godmode/agentes/massive_edit_modules.php: Fixed the
	ACL check into groups combo for bug 3001500 and 
	All agents display for bug 2999431

2010-05-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/gettext.php: Sorry I forget part of changes in "fixed the bug of
	pseudo-gettext with diferent arquitectures. Now check the arquitecture
	before." 
	Fixes: #2991545
	