@@ -81,6 +81,7 @@ echo '<span id="any_text" style="display: none;">' . __('Any') . '</span>';
 ?>
 <script language="javascript" type="text/javascript">
 $(document).ready (function () {
-	$("#id_agents").change (agent_changed);
+	//$("#id_agents").change (agent_changed);
+	$("#id_agents").change (agent_changed_by_multiple_agents);
 });
 </script>
